--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/italobologna/xml-sign#readme",
   "dependencies": {
-    "libxmljs": "^0.19.7"
+    "xmldom": "^0.3.0",
+    "xpath": "0.0.29"
   },
   "devDependencies": {
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "xml-c14n": "0.0.6"
   }
 }
