--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "homepage": "https://github.com/italobologna/xml-sign#readme",
   "dependencies": {
+    "node-forge": "^0.10.0",
+    "xml-c14n": "0.0.6",
     "xmldom": "^0.3.0",
     "xpath": "0.0.29"
   },
   "devDependencies": {
-    "mocha": "^8.1.3",
-    "xml-c14n": "0.0.6"
+    "mocha": "^8.1.3"
   }
 }
