Adds the key info to the signature node
Also adds minor refactor to the canonicalize methods which is not wrapped into a function that canonicalizes the node and returns the hash.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/italobologna/xml-sign#readme",
   "dependencies": {
     "node-forge": "^0.10.0",
+    "uuid": "^8.3.0",
     "xml-c14n": "0.0.6",
     "xmldom": "^0.3.0",
     "xpath": "0.0.29"
