Updated version with minor changes.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Library for signing XML documents.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*.js"
+    "test": "mocha test/**/*.js",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
